objects/GEMS_CaseOwnership_MetaData__mdt.object
<CustomObject>
    <description>This metadata is to decide owner for the creating cases</description>
    <fields>
        <fullName>Case_Team_Member__c</fullName>
        <label>Case Team Member</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HCSC_Division__c</fullName>
        <label>HCSC Division</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Que_Name__c</fullName>
        <label>Que Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_Of_Case__c</fullName>
        <label>Type Of Case</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>GEMS CaseOwnership MetaData</label>
    <pluralLabel>GEMS_CaseOwnerships_MetaData</pluralLabel>
</CustomObject>